2002-12-04  Bruno Haible  <bruno@clisp.org>

	Fix some GC-safety bugs.
	* package.d (safe_check_pack_lock): Use the first argument.
	(unuse_1package): Mark as "can trigger GC".
	(unuse_package): Likewise. Make GC-safe.
	(SYSTEM::%IN-PACKAGE): Make GC-safe.
	(DELETE-PACKAGE): Make GC-safe.
	* pathname.d (copy_upcase): Change return type to void.
	(parse_logical_word): Make GC-safe.
	(simplify_directory): Make GC-safe. Avoid bug when dir list contains
	"." followed by a non-string.
	* realelem.d (R_R_contagion_R): Make GC-safe.
	(N_N_contagion_R): Simplify and make GC-safe.
	(C_R_float_C): Make GC-safe.
	(N_N_float_N): Make GC-safe.
	* comptran.d (N_exp_N): Make GC-safe.
	(N_log_N): Make GC-safe.

2002-12-18  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (bt_beyond_stack_p): fixed the back_trace circularity
	bug: unwind until back_trace is strictly within STACK
	* eval.d (unwind_upto): no need to unwind_back_trace() in the beginning

2002-12-18  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out): handle uninterned symbols and
	special forms (Fsubrs) correctly

2002-12-04  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (alignof): With g++, use the builtin __alignof__. This
	avoids an error in alignof(jmp_buf) on FreeBSD that occurred because
	jmp_buf is defined using an anonymous struct type which makes jmp_buf
	not suitable as a template argument.

	* spvw_garcol.d (gc_mark): Add DEBUG_GC_MARK debugging facility.

	* lispbibl.d (simple_array_to_storage, simple_array_to_storage1):
	Change to avoid gcc warning.

	* lispbibl.d: Add inference TYPECODES => TRY_TYPECODES_1 on
	FreeBSD/x86.

2002-12-17  Sam Steingold  <sds@gnu.org>

	* describe.lisp (unicode-attributes-line): lines in
	UnicodeDataFull.txt may start with up to 6 hex digits now

2002-12-17  Sam Steingold  <sds@gnu.org>

	* charstrg.d (DIGIT-CHAR-P): correctly identify MYANMAR,
	ETHIOPIC, KHMER, and MONGOLIAN digits
	* uni_upcase.c, uni_downcase.c, uni_attribute.c: regenerated
